# Internet-Archive-Tool

./: .gitignore  ArchivePipeline.spec  LibraryArchive.spec  README.md  SetupGui.py  config.py  installer.iss  main.py  pyproject.toml  requirements.txt  setup-cli.py
.github/workflows/: build_windows.yml
controller/: GUIManager.py  ProcessManager.py
controller/mixin/: __init__.py  db_mixin.py  doc_process_mixin.py  image_mixin.py  schema_mixin.py  upload_mixin.py
model/: exceptions.py  settings_manager.py
model/data/: __init__.py  document.py  metadata.py  schema.py
model/logic/: app_setup.py  deskew.py  discover.py  helpers.py  loadImage.py  metadata.py  upload.py
model/service/: DatabaseManager.py  DocumentPipeline.py  ImageLoader.py  UploadManager.py  signals.py
model/task/: discoverTask.py
output/01_dec_1961/: metadata.json
resources/: IAMetadataKeys.json  default_schema.json  default_settings.json  document_schema.json  settings.json  style.qss
source/: config.py  main.py
source/controller/: GUIManager.py  ProcessManager.py
source/model/: __init__.py  exceptions.py  settings_manager.py
source/resources/: default_field_types.json  default_settings.json  help.toml
source/view/: theme.py
view/components/: ActionCard.py  ActionDashboard.py  CenteredFlowLayout.py  ClickableFrame.py  DashboardCards.py  DashboardDocumentCard.py  DocumentImagePanel.py  DocumentList.py  ExpandingCard.py  ImageLabel.py  InteractiveImageView.py  NavigationBar.py  Page.py  ProcessManagerWidget.py  SchemaForm.py  StyleManager.py  ThumbnailCard.py  ToggleSwitch.py  (+1 more)
(+76 files in other folders)
